# halal-screen-converter

./: .env  .gitignore  .gitmodules  README.md  TODO.md  main.py  pyproject.toml  requirements-freeze.txt  requirements.txt
converter/: servicer.py
converter/services/: IConverterService.py  converter.py  converter_test.py
core/: config.py
detection/: README.md
detection/dataclasses/: part.py
detection/enums/: type.py
detection/protocols/: detection_protocols.py  part.py
detection/services/: IDetectionService.py  detection.py  detection_test.py
halal_screen_proto/: converter_service_pb2.py  converter_service_pb2.pyi  converter_service_pb2_grpc.py
images/errors/: invalid_percentage.py
images/services/: IImagesService.py  images.py  images_test.py
mock/: TODO.md  type.py
mock/images/: humans_gray.py  person.py  room.py  street.py  street2.py  traffic.py
mock/videos/: airport.py  city.py  city_small.py
weights/: README.md
