[tool.poetry]
name = "halal-screen-converter"
version = "0.1.0"
description = ""
authors = ["Ravshan Selimov <51333533+ravshan01@users.noreply.github.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^10.2.0"
numpy = "^1.26.3"
pytest = "^7.4.4"
pytest-watch = "^4.2.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
opencv-python = "^4.9.0.80"
ultralytics = "^8.1.6"
ruff = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"